[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Png/CraftingTable.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Buildings/CraftingTable.gd" type="Script" id=2]
[ext_resource path="res://Assets/Icons/UI/MouseIndicatorAnim.tres" type="SpriteFrames" id=3]

[sub_resource type="ArrayMesh" id=1]
surfaces/0 = {
"aabb": AABB( -15, -13, 0, 29, 24.6, 0 ),
"array_data": PoolByteArray( 0, 0, 48, 65, 0, 0, 56, 193, 0, 0, 88, 63, 0, 0, 16, 62, 0, 0, 96, 65, 0, 0, 24, 193, 0, 0, 112, 63, 0, 0, 80, 62, 0, 0, 96, 65, 0, 0, 192, 64, 0, 0, 112, 63, 0, 0, 48, 63, 0, 0, 80, 65, 0, 0, 192, 64, 0, 0, 104, 63, 0, 0, 48, 63, 0, 0, 80, 65, 0, 0, 0, 65, 0, 0, 104, 63, 0, 0, 64, 63, 0, 0, 56, 65, 0, 0, 0, 65, 0, 0, 92, 63, 0, 0, 64, 63, 0, 0, 24, 65, 0, 0, 48, 65, 0, 0, 76, 63, 0, 0, 88, 63, 204, 204, 236, 64, 0, 0, 48, 65, 51, 51, 59, 63, 0, 0, 88, 63, 204, 204, 204, 64, 0, 0, 16, 65, 51, 51, 51, 63, 0, 0, 72, 63, 0, 0, 128, 64, 0, 0, 16, 65, 0, 0, 32, 63, 0, 0, 72, 63, 0, 0, 128, 64, 154, 153, 25, 65, 0, 0, 32, 63, 205, 204, 76, 63, 0, 0, 0, 0, 154, 153, 57, 65, 0, 0, 0, 63, 205, 204, 92, 63, 0, 0, 0, 0, 102, 102, 22, 65, 0, 0, 0, 63, 51, 51, 75, 63, 152, 153, 25, 192, 0, 0, 224, 64, 154, 153, 217, 62, 0, 0, 56, 63, 52, 51, 115, 192, 52, 51, 3, 65, 51, 51, 195, 62, 154, 153, 65, 63, 0, 0, 160, 192, 104, 102, 246, 64, 0, 0, 176, 62, 154, 153, 61, 63, 0, 0, 160, 192, 204, 204, 204, 64, 0, 0, 176, 62, 51, 51, 51, 63, 204, 204, 172, 192, 0, 0, 192, 64, 154, 153, 169, 62, 0, 0, 48, 63, 52, 51, 243, 192, 0, 0, 192, 64, 102, 102, 134, 62, 0, 0, 48, 63, 205, 204, 28, 193, 52, 51, 3, 65, 102, 102, 70, 62, 154, 153, 65, 63, 0, 0, 48, 193, 104, 102, 246, 64, 0, 0, 32, 62, 154, 153, 61, 63, 0, 0, 48, 193, 204, 204, 204, 64, 0, 0, 32, 62, 51, 51, 51, 63, 0, 0, 112, 193, 152, 153, 25, 64, 0, 0, 0, 61, 51, 51, 19, 63, 0, 0, 112, 193, 0, 0, 24, 193, 0, 0, 0, 61, 0, 0, 80, 62, 0, 0, 64, 193, 0, 0, 56, 193, 0, 0, 0, 62, 0, 0, 16, 62, 0, 0, 64, 193, 0, 0, 80, 193, 0, 0, 0, 62, 0, 0, 192, 61, 0, 0, 48, 65, 0, 0, 80, 193, 0, 0, 88, 63, 0, 0, 192, 61 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 3, 0, 4, 0, 5, 0, 5, 0, 6, 0, 7, 0, 9, 0, 10, 0, 11, 0, 13, 0, 14, 0, 15, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 23, 0, 24, 0, 25, 0, 26, 0, 0, 0, 2, 0, 3, 0, 3, 0, 5, 0, 7, 0, 9, 0, 11, 0, 12, 0, 13, 0, 15, 0, 16, 0, 18, 0, 20, 0, 21, 0, 21, 0, 23, 0, 24, 0, 24, 0, 26, 0, 0, 0, 0, 0, 3, 0, 7, 0, 9, 0, 12, 0, 13, 0, 13, 0, 16, 0, 17, 0, 18, 0, 21, 0, 24, 0, 0, 0, 7, 0, 8, 0, 8, 0, 9, 0, 13, 0, 17, 0, 18, 0, 24, 0, 24, 0, 0, 0, 8, 0, 8, 0, 13, 0, 17, 0, 17, 0, 24, 0, 8, 0 ),
"blend_shape_data": [  ],
"format": 262417,
"index_count": 75,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 27
}

[sub_resource type="CircleShape2D" id=2]
radius = 24.5153

[node name="CraftingTable" type="StaticBody2D"]
input_pickable = true
script = ExtResource( 2 )

[node name="Table" type="MeshInstance2D" parent="."]
mesh = SubResource( 1 )
texture = ExtResource( 1 )

[node name="CollisionShape" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -12, -4, 0, -4, 11, -4, 11, 5, 9, 8, 7, 5, 3, 5, 2, 8, 0, 5, 0, 2, -2, 2, -3, 5, -4, 5, -5, 2, -8, 2, -9, 5, -10, 5 )

[node name="Mouse" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -1, -15 )
z_index = 99
frames = ExtResource( 3 )
animation = "MouseRightIndicator"
frame = 1
playing = true

[node name="PlayerDetecter" type="Area2D" parent="."]
visible = false
input_pickable = false
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="PlayerDetecter"]
shape = SubResource( 2 )

[connection signal="mouse_entered" from="." to="." method="_on_CraftingTable_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CraftingTable_mouse_exited"]
[connection signal="body_entered" from="PlayerDetecter" to="." method="_on_PlayerDetecter_body_entered"]
[connection signal="body_exited" from="PlayerDetecter" to="." method="_on_PlayerDetecter_body_exited"]
